--- a/bootstrap-css/components.html
+++ b/bootstrap-css/components.html
@@ -150,7 +150,7 @@
                     <h2 class="display-4">Cards</h2>
                     <hr>
                     <div class="row g-4">
-                        <div class="col-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <img src="img1.jpg" alt="" class="card-img-top">
                                 <div class="card-body p-4">
@@ -166,7 +166,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <img src="img1.jpg" alt="" class="card-img-top">
                                 <div class="card-body p-4">
@@ -182,7 +182,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <img src="img1.jpg" alt="" class="card-img-top">
                                 <div class="card-body p-4">
@@ -314,8 +314,8 @@
                 <div class="col-12">
                     <h2 class="display-4">Forms</h2>
                     <hr>
-                    <div class="row justify-content-center g-4">
-                        <div class="col-12 col-sm-4">
+                    <div class="row justify-content-lg-center g-4">
+                        <div class="col-12 col-lg-4">
                             <div class="card p-1">
                                 <div class="card-body">
                                     <form action="">
@@ -338,7 +338,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-4">
+                        <div class="col-12 col-lg-4">
                             <div class="card px-1 py-2">
                                 <div class="card-body">
                                     <form action="">
@@ -361,7 +361,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6">
+                        <div class="col-12 col-lg-6">
                             <div class="card py-3 px-1">
                                 <div class="card-body">
                                     <form action="">
