--- a/tic-tac-toe - cells/index.html
+++ b/tic-tac-toe - cells/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="winner-message">
+        <span id="winner-text"></span>
+        <h1 style="margin-bottom: 30px;">¡winner!</h1>
+    </div>
 <main>
     <div class="game-info">
         <div class="game-info-item">
