--- a/my-grid- system-v0.1/index.html
+++ b/my-grid- system-v0.1/index.html
@@ -10,8 +10,8 @@
     <h1>Grids Layouts</h1>
     <ul>
         <li><a href="my-grid.html">My grid system</a></li>
-        <li><a href="my-grid.html">Bootstrap grid system</a></li>
-        <li><a href="my-grid.html">Materialize grid system</a></li>
+        <li><a href="bootstrap.html">Bootstrap grid system</a></li>
+        <li><a href="materialize.html">Materialize grid system</a></li>
     </ul>
 </body>
 </html>
