--- a/my-grid- system-v0.1/my-grid.html
+++ b/my-grid- system-v0.1/my-grid.html
@@ -6,21 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My grid system</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="components.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12" style="background-color: #009688;"></div>
-            <div class="col-6 md-col-4" style="background-color: #2196f3;"></div>
-            <div class="col-6 md-col-4" style="background-color: #3f51b5;"></div>
-            <div class="col-6 md-col-4" style="background-color: #673ab7;"></div>
+    <nav class="navbar navbar-expanded-md text-light">
+        <h1 class="navbar-logo">My Framework CSS</h1>
+        <div class="navbar-menu" id="navMenu">
+            <ul class="navbar-list">
+                <li class="navbar-item"><a href="" class="navbar-link">Home</a></li>
+                <li class="navbar-item"><a href="" class="navbar-link">Javascript</a></li>
+                <li class="navbar-item"><a href="" class="navbar-link">PHP</a></li>
+                <li class="navbar-item"><a href="" class="navbar-link">CSS</a></li>
+            </ul>
         </div>
+        <button class="navbar-btn" id="navButton"></button>
+    </nav>
+    
+    <div class="container py">
         <div class="row">
-            <div class="col-12 md-col-6" style="background-color: #673ab7;"></div>
-            <div class="col-12 md-col-6" style="background-color: #3f51b5;"></div>
-            <div class="col-12 md-col-6" style="background-color: #009688;"></div>
-            <div class="col-12 md-col-6" style="background-color: #2196f3;"></div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">1</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">2</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">3</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">4</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">5</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">6</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">7</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">8</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">9</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">10</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">11</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">12</div>
         </div>
     </div>
+    <div class="container pb">
+        <div class="row">
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">1</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">2</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">3</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">4</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">5</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">6</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">7</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">8</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">9</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">10</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">11</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">12</div>
+        </div>
+    </div>
+    <div class="container pb">
+        <div class="row">
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">1</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">2</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">3</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">4</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">5</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">6</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">7</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">8</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-teal">9</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-blue">10</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-purple">11</div>
+            <div class="col-12 sm-col-6 md-col-3 lg-col-1 bg-violet">12</div>
+        </div>
+    </div>
+    <script src="components.js"></script>
 </body>
 </html>
