--- a/my-grid- system-v0.1/bootstrap.html
+++ b/my-grid- system-v0.1/bootstrap.html
@@ -10,16 +10,18 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12 bg-primary">1</div>
-            <div class="col-6 col-md-4 bg-secondary">1</div>
-            <div class="col-6 col-md-4 bg-success">1</div>
-            <div class="col-6 col-md-4 bg-info">1</div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-6 bg-info">1</div>
-            <div class="col-12 col-md-6 bg-secondary">1</div>
-            <div class="col-12 col-md-6 bg-success">1</div>
-            <div class="col-12 col-md-6 bg-primary">1</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-primary">1</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-secondary">2</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-info">3</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-success">4</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-primary">5</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-secondary">6</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-info">7</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-success">8</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-primary">9</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-secondary">10</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-info">11</div>
+            <div class="col-12 col-sm-6 col-md-3 col-lg-1 bg-success">12</div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
