--- a/my-grid- system-v0.1/materialize.html
+++ b/my-grid- system-v0.1/materialize.html
@@ -10,16 +10,18 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col s12 teal white-text">col</div>
-            <div class="col s6 m4 blue white-text">col</div>
-            <div class="col s6 m4 indigo white-text">col</div>
-            <div class="col s6 m4 deep-purple white-text">col</div>
-        </div>
-        <div class="row">
-            <div class="col s12 m6 teal">col</div>
-            <div class="col s12 m6 indigo">col</div>
-            <div class="col s12 m6 deep-purple">col</div>
-            <div class="col s12 m6 blue">col</div>
+            <div class="col s12 m3 l1 teal">1</div>
+            <div class="col s12 m3 l1 blue">2</div>
+            <div class="col s12 m3 l1 deep-purple">3</div>
+            <div class="col s12 m3 l1 purple">4</div>
+            <div class="col s12 m3 l1 teal">5</div>
+            <div class="col s12 m3 l1 blue">6</div>
+            <div class="col s12 m3 l1 deep-purple">7</div>
+            <div class="col s12 m3 l1 purple">8</div>
+            <div class="col s12 m3 l1 teal">9</div>
+            <div class="col s12 m3 l1 blue">10</div>
+            <div class="col s12 m3 l1 deep-purple">11</div>
+            <div class="col s12 m3 l1 purple">12</div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
